Prevent horizontal overflow on html and body

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,9 @@ body {
 }
 
 
+html, body {
+  overflow-x: hidden;
+}
 
 
 /* -------------------- HEADER -------------------- */
